...
    };

    request();
  }, [api]);

  return (
    <ThemedView style={styles.container} testID={"profile-screen"}>
      <ThemedView style={styles.profileView}>
        <Image source={{ uri: profilePic }} style={styles.circle} />
        <View style={styles.name}>
          <ThemedText type="title">User</ThemedText>
          <ThemedText type="subtitle" testID="username">
            @{username}
...
